fix(build): add sonar job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,3 +124,19 @@ github-success:
   when: on_success
   script:
     - ${CI_PROJECT_DIR}/scripts/github-status.sh success
+
+sonar-success:
+  stage: status-post
+  extends:
+    - .build-sonar
+
+  script:
+    - make node_modules
+    - sonar-scanner
+        -Dsonar.projectKey=ssube_isolex
+        -Dsonar.projectVersion=${CI_COMMIT_REF_SLUG}
+        -Dsonar.organization=ssube-github
+        -Dsonar.sources=src/,test/
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.login=${SONAR_SECRET}
+        -Dsonar.typescript.lcov.reportPaths=out/coverage/lcov.info
