feat(utils/github): switch to app auth

--- a/docs/isolex.env
+++ b/docs/isolex.env
@@ -1,6 +1,8 @@
 export ISOLEX_DISCORD_TOKEN=""
 export ISOLEX_DISCORD_USER_ID="@"
-export ISOLEX_GITHUB_TOKEN=""
+export ISOLEX_GITHUB_APP_ID="0"
+export ISOLEX_GITHUB_APP_INSTALLATION="0"
+export ISOLEX_GITHUB_APP_KEY=""
 export ISOLEX_GITLAB_TOKEN=""
 export ISOLEX_GITLAB_URL="https://"
 export ISOLEX_LEX_ACCOUNT_ACCESS_KEY=""
