--- a/docs/controller/github/pr-controller.yml
+++ b/docs/controller/github/pr-controller.yml
@@ -3,7 +3,12 @@ metadata:
   name: test-pr
 data:
   client:
-    token: !env ISOLEX_GITHUB_TOKEN
+    agent: ssube/isolex/controller/github/pull-request
+    app:
+      id: !env ISOLEX_GITHUB_APP_ID
+      key: !env ISOLEX_GITHUB_APP_KEY
+    installation:
+      id: !env ISOLEX_GITHUB_APP_INSTALLATION
   transforms:
     - metadata:
         kind: template-transform
