--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,13 @@
 version: "2"
 
+checks:
+  method-complexity:
+    config:
+      threshold: 6    # 5 is *just* too low and flags a number of otherwise readable methods
+  method-lines:
+    config:
+      threshold: 30   # with object literals, lines are not a great measure
+
 exclude_patterns:
   - CHANGELOG.md
   - config/
