--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "ssube",
   "license": "MIT",
   "private": false,
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "dependencies": {
     "aws-sdk": "2.543.0",
     "discord.js": "11.5.1",
