--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -38,6 +38,7 @@ data:
     # !include ../docs/endpoint/debug-endpoint.yml
     - !include ../docs/endpoint/echo-endpoint.yml
     - !include ../docs/endpoint/gitlab-endpoint.yml
+    - !include ../docs/endpoint/health-endpoint.yml
   intervals:
     # !include ../docs/interval/command-interval.yml
     # !include ../docs/interval/cron-interval.yml
