lint(endpoint): merge helpers from github and gitlab webhooks

--- a/docs/endpoint/github-endpoint.yml
+++ b/docs/endpoint/github-endpoint.yml
@@ -3,5 +3,6 @@ metadata:
   name: test-github-endpoint
 data:
   filters: []
+  hookUser: 3d6dd1a1-11cd-4ca7-8fa4-49c78c73040d
   strict: false
   secret: 'test'
