fix(tests): cover user repository, base command

--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -61,7 +61,7 @@ data:
     data:
       lang: en
   logger:
-    level: debug
+    level: info
     name: isolex
   modules:
     - require: isolex-oot-example
