--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -17,6 +17,7 @@ data:
   controllers:
     - !include ../docs/controller/account-controller.yml
     - !include ../docs/controller/bot-controller.yml
+    - !include ../docs/controller/command-controller.yml
     - !include ../docs/controller/completion-controller.yml
     - !include ../docs/controller/dice-controller.yml
     - !include ../docs/controller/github/pr-controller.yml
@@ -35,7 +36,6 @@ data:
     - !include ../docs/controller/user-controller.yml
     - !include ../docs/controller/weather-controller-owm.yml
   endpoints:
-    # !include ../docs/endpoint/debug-endpoint.yml
     - !include ../docs/endpoint/echo-endpoint.yml
     - !include ../docs/endpoint/github-endpoint.yml
     - !include ../docs/endpoint/gitlab-endpoint.yml
