--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -20,6 +20,7 @@ data:
     - !include ../docs/controller/command-controller.yml
     - !include ../docs/controller/completion-controller.yml
     - !include ../docs/controller/dice-controller.yml
+    - !include ../docs/controller/echo-controller.yml
     - !include ../docs/controller/github/pr-controller.yml
     - !include ../docs/controller/gitlab/ci-controller.yml
     - !include ../docs/controller/gitlab/endpoint/push-controller.yml
