feat: replace context/target config with redirect (#582)

--- a/docs/controller/bot-controller.yml
+++ b/docs/controller/bot-controller.yml
@@ -3,6 +3,7 @@ metadata:
   name: default-bot
 data:
   filters: []
+  redirect: {}
   transforms:
     - metadata:
         kind: template-transform
