--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "@types/websocket": "1.0.0",
     "@types/ws": "6.0.3",
     "@types/yargs-parser": "13.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "ajv": "6.10.2",
     "bufferutil": "4.0.1",
     "bunyan": "1.8.12",
@@ -55,6 +58,13 @@
     "chai-as-promised": "7.1.1",
     "cron": "1.7.2",
     "escape-html": "1.0.3",
+    "eslint-plugin-chai": "^0.0.1",
+    "eslint-plugin-chai-expect": "^2.0.1",
+    "eslint-plugin-chai-expect-keywords": "^1.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-mocha": "^6.2.1",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "express": "4.17.1",
     "express-graphql": "0.9.0",
     "graphql": "14.5.8",
@@ -79,12 +89,12 @@
     "request-promise-native": "1.0.8",
     "rollup": "1.26.3",
     "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-multi-entry": "2.1.0",
     "rollup-plugin-node-externals": "2.1.2",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-tslint": "0.2.2",
     "rollup-plugin-typescript2": "0.25.2",
     "rollup-plugin-yaml": "2.0.0",
     "rxjs": "6.5.3",
@@ -95,13 +105,11 @@
     "source-map-support": "0.5.16",
     "split-string": "6.1.0",
     "standard-version": "7.0.0",
-    "tslint": "5.20.1",
+    "tslint": "^5.20.1",
     "tslint-clean-code": "0.2.10",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-etc": "1.9.2",
-    "tslint-microsoft-contrib": "6.2.0",
-    "tslint-sonarts": "1.9.0",
-    "typescript": "3.6.4",
+    "typescript": "3.7.2",
     "utf-8-validate": "5.0.2",
     "uuid": "3.3.3",
     "ws": "7.2.0",
